tests/baselines/reference/restElementWithNullInitializer.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts(1,14): error TS2461: Type 'null' is not an array type.


==== tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts (1 errors) ====
    function foo([...r] = null) { }
                 ~~~~~~
!!! error TS2461: Type 'null' is not an array type.
    